zerocopy-derive/tests/ui-nightly/derive_transparent.stderr
warning: unused import: `test_util::*`
 --> $DIR/derive_transparent.rs:8:5
  |
8 | use test_util::*;
  |     ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `NotZerocopy: FromZeroes` is not satisfied
  --> $DIR/derive_transparent.rs:33:18
   |
33 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromZeroes);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromZeroes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromZeroes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and 41 others
note: required for `TransparentStruct<NotZerocopy>` to implement `FromZeroes`
  --> $DIR/derive_transparent.rs:23:19
   |
23 | #[derive(AsBytes, FromZeroes, FromBytes, Unaligned)]
   |                   ^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> $DIR/derive_transparent.rs:33:1
   |
33 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromZeroes);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the derive macro `FromZeroes` which comes from the expansion of the macro `assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> $DIR/derive_transparent.rs:35:18
   |
35 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromBytes);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and 38 others
note: required for `TransparentStruct<NotZerocopy>` to implement `FromBytes`
  --> $DIR/derive_transparent.rs:23:31
   |
23 | #[derive(AsBytes, FromZeroes, FromBytes, Unaligned)]
   |                               ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> $DIR/derive_transparent.rs:35:1
   |
35 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromBytes);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the derive macro `FromBytes` which comes from the expansion of the macro `assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: AsBytes` is not satisfied
  --> $DIR/derive_transparent.rs:37:18
   |
37 | assert_impl_all!(TransparentStruct<NotZerocopy>: AsBytes);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `AsBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and 52 others
note: required for `TransparentStruct<NotZerocopy>` to implement `AsBytes`
  --> $DIR/derive_transparent.rs:23:10
   |
23 | #[derive(AsBytes, FromZeroes, FromBytes, Unaligned)]
   |          ^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> $DIR/derive_transparent.rs:37:1
   |
37 | assert_impl_all!(TransparentStruct<NotZerocopy>: AsBytes);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the derive macro `AsBytes` which comes from the expansion of the macro `assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: Unaligned` is not satisfied
  --> $DIR/derive_transparent.rs:39:18
   |
39 | assert_impl_all!(TransparentStruct<NotZerocopy>: Unaligned);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Unaligned` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `Unaligned`:
             ()
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             ManuallyDrop<T>
           and 19 others
note: required for `TransparentStruct<NotZerocopy>` to implement `Unaligned`
  --> $DIR/derive_transparent.rs:23:42
   |
23 | #[derive(AsBytes, FromZeroes, FromBytes, Unaligned)]
   |                                          ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> $DIR/derive_transparent.rs:39:1
   |
39 | assert_impl_all!(TransparentStruct<NotZerocopy>: Unaligned);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the derive macro `Unaligned` which comes from the expansion of the macro `assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
